src/toggl_api.h

    TOGGL_EXPORT void toggl_edit(
        void *context,
        const char_t *guid,
        const bool_t edit_running_time_entry,
        const char_t *focused_field_name);
    TOGGL_EXPORT void toggl_edit_preferences(
        void *context);
    TOGGL_EXPORT bool_t toggl_continue(
        void *context,
        const char_t *guid);
    TOGGL_EXPORT bool_t toggl_continue_latest(
        void *context,
        const bool_t prevent_on_app);
    TOGGL_EXPORT bool_t toggl_delete_time_entry(
        void *context,
        const char_t *guid);
    TOGGL_EXPORT bool_t toggl_set_time_entry_duration(
        void *context,
        const char_t *guid,
        const char_t *value);
    TOGGL_EXPORT bool_t toggl_set_time_entry_project(
        void *context,
        const char_t *guid,
        const uint64_t task_id,
        const uint64_t project_id,
        const char_t *project_guid);
    TOGGL_EXPORT bool_t toggl_set_time_entry_date(
        void *context,
        const char_t *guid,
        const int64_t unix_timestamp);
    TOGGL_EXPORT bool_t toggl_set_time_entry_start(
        void *context,
        const char_t *guid,
        const char_t *value);
    TOGGL_EXPORT bool_t toggl_set_time_entry_start_timestamp(
        void *context,
        const char_t *guid,
        const int64_t start);
    TOGGL_EXPORT bool_t toggl_set_time_entry_start_timestamp_with_option(
        void *context,
        const char_t *guid,
        const int64_t start,
        const bool_t keep_end_time_fixed);
    TOGGL_EXPORT bool_t toggl_set_time_entry_end(
        void *context,
        const char_t *guid,
        const char_t *value);
    TOGGL_EXPORT bool_t toggl_set_time_entry_end_timestamp(
        void *context,
        const char_t *guid,
        const int64_t end);
    // value is '\t' separated tag list
    TOGGL_EXPORT bool_t toggl_set_time_entry_tags(
        void *context,
        const char_t *guid,
        const char_t *value);
    TOGGL_EXPORT bool_t toggl_set_time_entry_billable(
        void *context,
        const char_t *guid,
        bool_t value);
    // Redmine fork: set the entry's TimeEntryActivity id.
    TOGGL_EXPORT bool_t toggl_set_time_entry_activity(
        void *context,
        const char_t *guid,
        const uint64_t activity_id);
    TOGGL_EXPORT bool_t toggl_set_time_entry_description(
        void *context,
        const char_t *guid,
        const char_t *value);
    TOGGL_EXPORT bool_t toggl_stop(
        void *context,
        const bool_t prevent_on_app);
    TOGGL_EXPORT bool_t toggl_discard_time_at(
        void *context,
        const char_t *guid,
        const int64_t at,
        const bool_t split_into_new_entry);