app/lib/src/native/toggl_api_generated.dart


  late final _toggl_editPtr =
      _lookup<
        ffi.NativeFunction<
          ffi.Void Function(
            ffi.Pointer<ffi.Void>,
            ffi.Pointer<ffi.Char>,
            ffi.Int,
            ffi.Pointer<ffi.Char>,
          )
        >
      >('toggl_edit');
  late final _toggl_edit = _toggl_editPtr
      .asFunction<
        void Function(
          ffi.Pointer<ffi.Void>,
          ffi.Pointer<ffi.Char>,
          int,
          ffi.Pointer<ffi.Char>,
        )
      >();

  void toggl_edit_preferences(ffi.Pointer<ffi.Void> context) {
    return _toggl_edit_preferences(context);
  }

  late final _toggl_edit_preferencesPtr =
      _lookup<ffi.NativeFunction<ffi.Void Function(ffi.Pointer<ffi.Void>)>>(
        'toggl_edit_preferences',
      );
  late final _toggl_edit_preferences = _toggl_edit_preferencesPtr
      .asFunction<void Function(ffi.Pointer<ffi.Void>)>();

  int toggl_continue(
    ffi.Pointer<ffi.Void> context,
    ffi.Pointer<ffi.Char> guid,
  ) {
    return _toggl_continue(context, guid);
  }

  late final _toggl_continuePtr =
      _lookup<
        ffi.NativeFunction<
          ffi.Int Function(ffi.Pointer<ffi.Void>, ffi.Pointer<ffi.Char>)
        >
      >('toggl_continue');
  late final _toggl_continue = _toggl_continuePtr
      .asFunction<int Function(ffi.Pointer<ffi.Void>, ffi.Pointer<ffi.Char>)>();

  int toggl_continue_latest(ffi.Pointer<ffi.Void> context, int prevent_on_app) {
    return _toggl_continue_latest(context, prevent_on_app);
  }

  late final _toggl_continue_latestPtr =
      _lookup<
        ffi.NativeFunction<ffi.Int Function(ffi.Pointer<ffi.Void>, ffi.Int)>
      >('toggl_continue_latest');
  late final _toggl_continue_latest = _toggl_continue_latestPtr
      .asFunction<int Function(ffi.Pointer<ffi.Void>, int)>();

  int toggl_delete_time_entry(
    ffi.Pointer<ffi.Void> context,
    ffi.Pointer<ffi.Char> guid,
  ) {
    return _toggl_delete_time_entry(context, guid);
  }

  late final _toggl_delete_time_entryPtr =
      _lookup<
        ffi.NativeFunction<
          ffi.Int Function(ffi.Pointer<ffi.Void>, ffi.Pointer<ffi.Char>)
        >
      >('toggl_delete_time_entry');
  late final _toggl_delete_time_entry = _toggl_delete_time_entryPtr
      .asFunction<int Function(ffi.Pointer<ffi.Void>, ffi.Pointer<ffi.Char>)>();

  int toggl_set_time_entry_duration(
    ffi.Pointer<ffi.Void> context,
    ffi.Pointer<ffi.Char> guid,
    ffi.Pointer<ffi.Char> value,
  ) {
    return _toggl_set_time_entry_duration(context, guid, value);
  }

  late final _toggl_set_time_entry_durationPtr =
      _lookup<
        ffi.NativeFunction<
          ffi.Int Function(
            ffi.Pointer<ffi.Void>,
            ffi.Pointer<ffi.Char>,
            ffi.Pointer<ffi.Char>,
          )
        >
      >('toggl_set_time_entry_duration');
  late final _toggl_set_time_entry_duration = _toggl_set_time_entry_durationPtr
      .asFunction<
        int Function(
          ffi.Pointer<ffi.Void>,
          ffi.Pointer<ffi.Char>,
          ffi.Pointer<ffi.Char>,
        )
      >();

  int toggl_set_time_entry_project(
    ffi.Pointer<ffi.Void> context,
    ffi.Pointer<ffi.Char> guid,
    int task_id,
    int project_id,
    ffi.Pointer<ffi.Char> project_guid,
  ) {
    return _toggl_set_time_entry_project(
      context,
      guid,
      task_id,
      project_id,
      project_guid,
    );
  }

  late final _toggl_set_time_entry_projectPtr =
      _lookup<
        ffi.NativeFunction<
          ffi.Int Function(
            ffi.Pointer<ffi.Void>,
            ffi.Pointer<ffi.Char>,
            ffi.Uint64,
            ffi.Uint64,
            ffi.Pointer<ffi.Char>,
          )
        >
      >('toggl_set_time_entry_project');
  late final _toggl_set_time_entry_project = _toggl_set_time_entry_projectPtr
      .asFunction<
        int Function(
          ffi.Pointer<ffi.Void>,
          ffi.Pointer<ffi.Char>,
          int,
          int,
          ffi.Pointer<ffi.Char>,
        )
      >();

  int toggl_set_time_entry_date(
    ffi.Pointer<ffi.Void> context,
    ffi.Pointer<ffi.Char> guid,
    int unix_timestamp,
  ) {
    return _toggl_set_time_entry_date(context, guid, unix_timestamp);
  }

  late final _toggl_set_time_entry_datePtr =
      _lookup<
        ffi.NativeFunction<
          ffi.Int Function(
            ffi.Pointer<ffi.Void>,
            ffi.Pointer<ffi.Char>,
            ffi.Int64,
          )
        >
      >('toggl_set_time_entry_date');
  late final _toggl_set_time_entry_date = _toggl_set_time_entry_datePtr
      .asFunction<
        int Function(ffi.Pointer<ffi.Void>, ffi.Pointer<ffi.Char>, int)
      >();

  int toggl_set_time_entry_start(
    ffi.Pointer<ffi.Void> context,
    ffi.Pointer<ffi.Char> guid,
    ffi.Pointer<ffi.Char> value,
  ) {
    return _toggl_set_time_entry_start(context, guid, value);
  }

  late final _toggl_set_time_entry_startPtr =
      _lookup<
        ffi.NativeFunction<
          ffi.Int Function(
            ffi.Pointer<ffi.Void>,
            ffi.Pointer<ffi.Char>,
            ffi.Pointer<ffi.Char>,
          )
        >
      >('toggl_set_time_entry_start');
  late final _toggl_set_time_entry_start = _toggl_set_time_entry_startPtr
      .asFunction<
        int Function(
          ffi.Pointer<ffi.Void>,
          ffi.Pointer<ffi.Char>,
          ffi.Pointer<ffi.Char>,
        )
      >();

  int toggl_set_time_entry_start_timestamp(
    ffi.Pointer<ffi.Void> context,
    ffi.Pointer<ffi.Char> guid,
    int start,
  ) {
    return _toggl_set_time_entry_start_timestamp(context, guid, start);
  }

  late final _toggl_set_time_entry_start_timestampPtr =
      _lookup<
        ffi.NativeFunction<
          ffi.Int Function(
            ffi.Pointer<ffi.Void>,
            ffi.Pointer<ffi.Char>,
            ffi.Int64,
          )
        >
      >('toggl_set_time_entry_start_timestamp');
  late final _toggl_set_time_entry_start_timestamp =
      _toggl_set_time_entry_start_timestampPtr
          .asFunction<
            int Function(ffi.Pointer<ffi.Void>, ffi.Pointer<ffi.Char>, int)
          >();

  int toggl_set_time_entry_start_timestamp_with_option(
    ffi.Pointer<ffi.Void> context,
    ffi.Pointer<ffi.Char> guid,
    int start,
    int keep_end_time_fixed,
  ) {
    return _toggl_set_time_entry_start_timestamp_with_option(
      context,
      guid,
      start,
      keep_end_time_fixed,
    );
  }

  late final _toggl_set_time_entry_start_timestamp_with_optionPtr =
      _lookup<
        ffi.NativeFunction<
          ffi.Int Function(
            ffi.Pointer<ffi.Void>,
            ffi.Pointer<ffi.Char>,
            ffi.Int64,
            ffi.Int,
          )
        >
      >('toggl_set_time_entry_start_timestamp_with_option');
  late final _toggl_set_time_entry_start_timestamp_with_option =
      _toggl_set_time_entry_start_timestamp_with_optionPtr
          .asFunction<
            int Function(ffi.Pointer<ffi.Void>, ffi.Pointer<ffi.Char>, int, int)
          >();

  int toggl_set_time_entry_end(
    ffi.Pointer<ffi.Void> context,
    ffi.Pointer<ffi.Char> guid,
    ffi.Pointer<ffi.Char> value,
  ) {
    return _toggl_set_time_entry_end(context, guid, value);
  }

  late final _toggl_set_time_entry_endPtr =
      _lookup<
        ffi.NativeFunction<
          ffi.Int Function(
            ffi.Pointer<ffi.Void>,
            ffi.Pointer<ffi.Char>,
            ffi.Pointer<ffi.Char>,
          )
        >
      >('toggl_set_time_entry_end');
  late final _toggl_set_time_entry_end = _toggl_set_time_entry_endPtr
      .asFunction<
        int Function(
          ffi.Pointer<ffi.Void>,
          ffi.Pointer<ffi.Char>,
          ffi.Pointer<ffi.Char>,
        )
      >();

  int toggl_set_time_entry_end_timestamp(
    ffi.Pointer<ffi.Void> context,
    ffi.Pointer<ffi.Char> guid,
    int end,
  ) {
    return _toggl_set_time_entry_end_timestamp(context, guid, end);
  }

  late final _toggl_set_time_entry_end_timestampPtr =
      _lookup<
        ffi.NativeFunction<
          ffi.Int Function(
            ffi.Pointer<ffi.Void>,
            ffi.Pointer<ffi.Char>,
            ffi.Int64,
          )
        >
      >('toggl_set_time_entry_end_timestamp');
  late final _toggl_set_time_entry_end_timestamp =
      _toggl_set_time_entry_end_timestampPtr
          .asFunction<
            int Function(ffi.Pointer<ffi.Void>, ffi.Pointer<ffi.Char>, int)
          >();

  /// value is '\t' separated tag list
  int toggl_set_time_entry_tags(
    ffi.Pointer<ffi.Void> context,
    ffi.Pointer<ffi.Char> guid,
    ffi.Pointer<ffi.Char> value,
  ) {
    return _toggl_set_time_entry_tags(context, guid, value);
  }

  late final _toggl_set_time_entry_tagsPtr =
      _lookup<
        ffi.NativeFunction<
          ffi.Int Function(
            ffi.Pointer<ffi.Void>,
            ffi.Pointer<ffi.Char>,
            ffi.Pointer<ffi.Char>,
          )
        >
      >('toggl_set_time_entry_tags');
  late final _toggl_set_time_entry_tags = _toggl_set_time_entry_tagsPtr
      .asFunction<
        int Function(
          ffi.Pointer<ffi.Void>,
          ffi.Pointer<ffi.Char>,
          ffi.Pointer<ffi.Char>,
        )
      >();

  int toggl_set_time_entry_billable(
    ffi.Pointer<ffi.Void> context,
    ffi.Pointer<ffi.Char> guid,
    int value,
  ) {
    return _toggl_set_time_entry_billable(context, guid, value);
  }

  late final _toggl_set_time_entry_billablePtr =
      _lookup<
        ffi.NativeFunction<
          ffi.Int Function(
            ffi.Pointer<ffi.Void>,
            ffi.Pointer<ffi.Char>,
            ffi.Int,
          )
        >
      >('toggl_set_time_entry_billable');
  late final _toggl_set_time_entry_billable = _toggl_set_time_entry_billablePtr
      .asFunction<
        int Function(ffi.Pointer<ffi.Void>, ffi.Pointer<ffi.Char>, int)
      >();

  /// Redmine fork: set the entry's TimeEntryActivity id.
  int toggl_set_time_entry_activity(
    ffi.Pointer<ffi.Void> context,
    ffi.Pointer<ffi.Char> guid,
    int activity_id,
  ) {
    return _toggl_set_time_entry_activity(context, guid, activity_id);
  }

  late final _toggl_set_time_entry_activityPtr =
      _lookup<
        ffi.NativeFunction<
          ffi.Int Function(
            ffi.Pointer<ffi.Void>,
            ffi.Pointer<ffi.Char>,
            ffi.Uint64,
          )
        >
      >('toggl_set_time_entry_activity');
  late final _toggl_set_time_entry_activity = _toggl_set_time_entry_activityPtr
      .asFunction<
        int Function(ffi.Pointer<ffi.Void>, ffi.Pointer<ffi.Char>, int)
      >();

  int toggl_set_time_entry_description(
    ffi.Pointer<ffi.Void> context,
    ffi.Pointer<ffi.Char> guid,
    ffi.Pointer<ffi.Char> value,
  ) {
    return _toggl_set_time_entry_description(context, guid, value);
  }

  late final _toggl_set_time_entry_descriptionPtr =
      _lookup<
        ffi.NativeFunction<
          ffi.Int Function(
            ffi.Pointer<ffi.Void>,
            ffi.Pointer<ffi.Char>,
            ffi.Pointer<ffi.Char>,
          )
        >
      >('toggl_set_time_entry_description');
  late final _toggl_set_time_entry_description =
      _toggl_set_time_entry_descriptionPtr
          .asFunction<
            int Function(
              ffi.Pointer<ffi.Void>,
              ffi.Pointer<ffi.Char>,
              ffi.Pointer<ffi.Char>,
            )
          >();

  int toggl_stop(ffi.Pointer<ffi.Void> context, int prevent_on_app) {
    return _toggl_stop(context, prevent_on_app);
  }

  late final _toggl_stopPtr =
      _lookup<
        ffi.NativeFunction<ffi.Int Function(ffi.Pointer<ffi.Void>, ffi.Int)>
      >('toggl_stop');
  late final _toggl_stop = _toggl_stopPtr
      .asFunction<int Function(ffi.Pointer<ffi.Void>, int)>();

  int toggl_discard_time_at(
    ffi.Pointer<ffi.Void> context,
    ffi.Pointer<ffi.Char> guid,
    int at,
    int split_into_new_entry,
  ) {
    return _toggl_discard_time_at(context, guid, at, split_into_new_entry);
  }
